--- a/RPInventory/Pages/Brands/Create.cshtml
+++ b/RPInventory/Pages/Brands/Create.cshtml
@@ -2,12 +2,9 @@
 @model RPInventory.Pages.Brands.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Brand";
 }
-
-<h1>Create</h1>
-
-<h4>Brand</h4>
+<h4>@ViewData["Title"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,15 +15,11 @@
                 <input asp-for="Brand.Name" class="form-control" />
                 <span asp-validation-for="Brand.Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <partial name="Actions/_Create" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
