--- a/RPInventory/Pages/Brands/Delete.cshtml
+++ b/RPInventory/Pages/Brands/Delete.cshtml
@@ -1,16 +1,13 @@
-﻿@page
+﻿@page "{id:int?}"
 @model RPInventory.Pages.Brands.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Do you want to delete brand with name" + Model.Brand.Name + "?";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h4>@ViewData["Title"]</h4>
+<hr />
 <div>
-    <h4>Brand</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Brand.Name)
@@ -22,7 +19,6 @@
     
     <form method="post">
         <input type="hidden" asp-for="Brand.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <partial name="Actions/_Delete" />
     </form>
 </div>
