--- a/RPInventory/Pages/Brands/Edit.cshtml
+++ b/RPInventory/Pages/Brands/Edit.cshtml
@@ -1,13 +1,10 @@
-﻿@page
+﻿@page "{id:int?}"
 @model RPInventory.Pages.Brands.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Brand";
 }
-
-<h1>Edit</h1>
-
-<h4>Brand</h4>
+<h4>@ViewData["Title"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,15 +16,11 @@
                 <input asp-for="Brand.Name" class="form-control" />
                 <span asp-validation-for="Brand.Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <partial name="Actions/_Edit"/>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
