--- a/RPInventory/Pages/Brands/Index.cshtml
+++ b/RPInventory/Pages/Brands/Index.cshtml
@@ -1,36 +1,49 @@
 ﻿@page
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
 @model RPInventory.Pages.Brands.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Brands";
 }
 
-<h1>Index</h1>
+@await Html.PartialAsync("Actions/_CreateSearch", new CreateSearchViewModel {
+    SearchTerm = Model.SearchTerm,
+    TitleCreate = "Create Brand",
+    TotalRecords = Model.TotalRecords
+})
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+
+
+<table class="table table-hover table-bordered table-striped">
+    <thead class="bg-primary text-white">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Brand[0].Name)
+                @Html.DisplayNameFor(model => model.Brands[0].Name)
             </th>
-            <th></th>
+            <th class="text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Brand) {
+@foreach (var item in Model.Brands) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="text-center">
+               <partial name="Actions/_Crud" model="item.Id"/>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+@Html.PagedListPager(Model.Brands, page => Url.Action("Index", new {
+    Page = page,
+    SearchTerm = Model.SearchTerm
+}),
+    new PagedListRenderOptions {
+        LiElementClasses = new string[]{"page-item"},
+        PageClasses = new string[] {"page-link"}
+    }
+)
