--- a/RPInventory/Pages/_ViewImports.cshtml
+++ b/RPInventory/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RPInventory
+@using RPInventory.ViewModels
 @namespace RPInventory.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
