Implemented Products pages

--- a/RPInventory/Pages/Departments/Delete.cshtml
+++ b/RPInventory/Pages/Departments/Delete.cshtml
@@ -2,7 +2,7 @@
 @model RPInventory.Pages.Departments.DeleteModel
 
 @{
-    ViewData["Title"] = "¿Desea eliminar el departamento con nombre " + Model.Department.Name + "?";
+    ViewData["Title"] = "Do you want to delete departamento with name" + Model.Department.Name + "?";
 }
 
 <h4>@ViewData["Title"]</h4>
