Implemented User Pages

--- a/RPInventory/Pages/Products/Details.cshtml
+++ b/RPInventory/Pages/Products/Details.cshtml
@@ -2,7 +2,7 @@
 @model RPInventory.Pages.Products.DetailsModel
 
 @{
-    ViewData["Title"] = "Detalles del producto";
+    ViewData["Title"] = "Product Details";
 }
 
 <h4>@ViewData["Title"]</h4>
