--- a/RPInventory/Pages/Shared/_Layout.cshtml
+++ b/RPInventory/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Departments/Index">Departments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Users//Index">Users</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Users/Index">Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Profiles/Index">Profiles</a>
