--- a/RPInventory/Pages/Shared/_Layout.cshtml
+++ b/RPInventory/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Profiles/Index">Profiles</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
