Added Photo implementation for Users

--- a/RPInventory/Pages/Users/Create.cshtml
+++ b/RPInventory/Pages/Users/Create.cshtml
@@ -7,9 +7,9 @@
 }
 <h4>@ViewData["Title"]</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
+<form method="post" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mt-3">
                 <label asp-for="User.ProfileId" class="control-label"></label>
@@ -61,14 +61,38 @@
             <div class="form-group mt-3">
                 <partial name="Actions/_Create" />
             </div>
-        </form>
+        </div>
+        @* Implementación Imágenes *@
+        <div class="col-md-6">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="User.Photo" style="width: 100%;"></label>
+                @if (Model.User.Photo != null)
+                {
+                    <img id="Photo" style="width:350px;height:350px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.User.Photo))">
+                }
+                else
+                {
+                    <img id="Photo" style="width:350px;height:350px; object-fit:cover" src="">
+                }
+                <input type="file"
+                       accept=".png,.jpg,.jpeg,.gif,.tif"
+                       asp-for="User.Photo"
+                       class="form-control"
+                       onchange="document.getElementById('Photo').src = window.URL.createObjectURL(this.files[0])" />
+                <span asp-validation-for="User.Photo" class="text-danger"></span>
+            </div>
+        </div>
+        @* Implementación Imágenes *@
     </div>
-</div>
+</form>
 <span class="fa-solid fa-spinner fa-5x spinner" id="ajax-loader"></span>
 @section Scripts {
     <script src="~/js/app.js"></script>
     <script src="~/js/servicios-ajax.js"></script>
     <script src="~/js/servicio-datos.js"></script>
-    <script src="~/js/crearusuariovm.js"></script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/crearUservm.js"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
