--- a/RPInventory/Pages/Shared/_Layout.cshtml
+++ b/RPInventory/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Inventory</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/fortawesome/fontawesome-free/css/all.min.css" />
+    <link href="~/lib/mdb-ui-kit/css/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RPInventory.styles.css" asp-append-version="true" />
 </head>
@@ -60,6 +61,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/mdb-ui-kit/js/mdb.es.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await Component.InvokeAsync("Notyf")
